trying to fix blend mode on mobile

--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@ surrounding that you have the border,
 and surrounding that you have the margin.
 
 |-Margin Box----------|
-||--Boder Box--------||
+||--Border Box--------||
 |||---Padding Box---|||
 ||||----Element Box||||
 |||-----------------|||
@@ -296,9 +296,9 @@ a.homeLink:active {
 
 /* Add a card effect for articles */
 .card {
+  background-blend-mode: multiply;
   background-color: var(--main-box-color);
   background-image: var(--bg-img-elements);
-  background-blend-mode: multiply;
   padding: 3rem;
   margin-top: 2rem;
   box-shadow: var(--main-box-shadow-setting);
